--- a/community.html
+++ b/community.html
@@ -25,9 +25,11 @@
 <body>
 
     <h1>實驗社群</h1>
+    <h2>這是次要標題</h2>
+    
+    <p>這是一段介紹文字，下面有一張圖片：</p>
 
-    <p>公開論壇</p>
-
+    <img src="cat.jpg" alt="可愛的貓咪" width="300">
     <hr>
 
     <p><a href="index.html">返回首頁</a></p>
