--- a/index.html
+++ b/index.html
@@ -3,7 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>實驗首頁</title>
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>標題層級範例 - 科技新聞社群實驗網</title>
+    <style>
+        /* 簡單樣式區分不同層級大小 */
+        body { font-family: sans-serif; padding: 15px; }
+        h1 { font-size: 2.5em; margin-bottom: 0.5em; }
+        h2 { font-size: 2em; margin-bottom: 0.5em; }
+        h3 { font-size: 1.75em; margin-bottom: 0.5em; }
+        h4 { font-size: 1.5em; margin-bottom: 0.5em; }
+        h5 { font-size: 1.25em; margin-bottom: 0.5em; }
+        h6 { font-size: 1em; color: #555; margin-bottom: 0.5em; }
+    </style>
+</head>
+<body>
+
+    <h1>科技新聞社群實驗網</h1>
+
+    <h2>最新科技新聞</h2>
+
+    <h3>人工智慧發展</h3>
+
+    <h4>大型語言模型最新突破</h4>
+
+    <h5>模型訓練資料來源分析</h5>
+
+    <h6>資料集版本：2025-Q1</h6>
+
+    <hr>
+    <p>以上展示了從 H1 到 H6 六個不同層級的標題範例。</p>
+
+</body>
+</html>
     <style>
         body {
             font-family: sans-serif;
