--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
     <h4>大型語言模型最新突破</h4>
 
     <h5>模型訓練資料來源分析</h5>
-
-    <h6>資料集版本：2025-Q1</h6>
-
-    <hr>
-    <p>以上展示了從 H1 到 H6 六個不同層級的標題範例。</p>
 </body>
     <style>
         body {
@@ -60,9 +55,7 @@
 </head>
 <body>
 
-    <h1>實驗首頁</h1>
-
-    <p>請選擇您想前往的頁面：</p>
+    <p>請選擇您想前往的頁面，!!!：</p>
 
     <a href="news.html" class="button-link">新聞</a>
     <a href="community.html" class="button-link">社群</a>
