--- a/index.html
+++ b/index.html
@@ -29,29 +29,11 @@
         }
 
         /* --- 標題 H1 --- */
-       <title>標題層級範例 - 科技新聞社群實驗網</title>
-     <style>
-         /* 簡單樣式區分不同層級大小 */
-         body { font-family: sans-serif; padding: 15px; }
-         h1 { font-size: 2.5em; margin-bottom: 0.5em; }
-         h2 { font-size: 2em; margin-bottom: 0.5em; }
-         h3 { font-size: 1.75em; margin-bottom: 0.5em; }
-         h4 { font-size: 1.5em; margin-bottom: 0.5em; }
-         h5 { font-size: 1.25em; margin-bottom: 0.5em; }
-         h6 { font-size: 1em; color: #555; margin-bottom: 0.5em; }
-     </style>
- </head>
- <body>
- 
-     <h1>科技新聞社群實驗網</h1>
- 
-     <h2>最新科技新聞</h2>
- 
-     <h3>人工智慧發展</h3>
- 
-     <h4>大型語言模型最新突破</h4>
- 
-     <h5>模型訓練資料來源分析</h5>
+        h1 {
+            color: #FBBA59; /* 標題顏色：中橘色/金色 */
+            margin-bottom: 1em; /* 與下方元素的間距 */
+            font-size: 2.5em; /* 調整字體大小 */
+        }
 
         /* --- 段落 P --- */
         p {
